# Predict-Store-Sales---Walmart-Kaggle-Dataset

./: CHANGLOG.md  README.md  feat_sto.csv  pyproject.toml  walmart_notebook.ipynb  walmartdf.csv
.ipynb_checkpoints/: walmart_notebook-checkpoint.ipynb
walmart/: getwalmart.py  holidayweeks.sql
