[tool.poetry]
name = "walmart"
version = "0.1.0"
description = ""
authors = ["Jason Mah <jzqmah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.15"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
